@@ -123,6 +123,7 @@ Donn Cave
 Charles Cazabon
 Per Cederqvist
 Octavian Cerna
+Pascal Chambon
 Hye-Shik Chang
 Jeffrey Chang
 Mitch Chapman
