@@ -239,6 +239,11 @@ C-API
 Library
 -------
 
+- Issue #6939: Fix file I/O objects in the `io` module to keep the original
+  file position when calling `truncate()`.  It would previously change the
+  file position to the given argument, which goes against the tradition of
+  ftruncate() and other truncation APIs.  Patch by Pascal Chambon.
+
 - Issue #7610: Reworked implementation of the internal
   :class:`zipfile.ZipExtFile` class used to represent files stored inside
   an archive.  The new implementation is significantly faster and can
